manifests/3.service.yaml
kind: Service
apiVersion: v1
metadata:
  name: gcs-uploader-service
spec:
  selector:
    app: gcs-uploader
  ports:
    - port: 4545
